--- a/service/src/utils/i18n/dictionaries/en.json
+++ b/service/src/utils/i18n/dictionaries/en.json
@@ -1,4 +1,13 @@
 {
+    "components": {
+        "languageSwitcher": {
+            "dropdownLabel": "Languages",
+            "dropdownOptionLabel": "English",
+            "dropdownOptionDescription": "German / English",
+            "dropdownAddButton": "Add language",
+            "dropdownTooltipFeature": "This feature is enabled soon."
+        }
+    },
     "pages": {
         "authentication": {
             "login": {
